--- a/onas/jan-faltynek.html
+++ b/onas/jan-faltynek.html
@@ -15,19 +15,25 @@ title: Jan Faltýnek
     <div class="person__box">
       <h3 class="person__title">Jan Faltýnek,<span> bas</span></h3>
       <h4>Vzdělání</h4>
-      <p>Elektrotechnická fakulta VUT v Brně, obor mikroelektronika.</p>
+      <p>Fyzika plazmatu na MU.</p>
       <h4>Hudební praxe?</h4>
       <p>
-        Sborový zpěv od malička, kdykoliv a kdekoliv. Od el. kytary jsem zběhl k
-        base (jak jinak) a užívám si v kapelách od soulu/blues až po novovlný
-        punk.
+        Klavír na ZUŠ; zpěv: gymnaziální sbor Mladí Madrigalisté, Cappella
+        Polyphonica Salesiana, Ars Brunensis, Czech Ensemble Baroque, Komorní
+        opera JAMU, Illegal Consort, Octopus Vocalis.<br />
+        Další hudební nástroje: ukulele, guitalele, loutna, nějaké nepříliš
+        dobré flétnování, klarinetování a mandolínování
       </p>
       <h4>Záliby?</h4>
-      <p>Hudba, dobrý čaj, staré knihy a hlavně jejich obsah.</p>
+      <p>
+        jazyky, herní systémy, design a teorie her, zážitková pedagogika, sport
+        (hlavně kolektivní), vtipy, popularizace vědy, objevování a spartace
+        staré hudby, tanec
+      </p>
       <h4>Nejoblíbenější skladba z repertoáru?</h4>
-      <p>To se postupem času neustále mění.</p>
+      <p>asi Pearsall, Lydia dic per omnes nebo jingle bells.</p>
       <h4>Čaj nebo kafe?</h4>
-      <p>Určitě čaj z čerstvé máty nebo Maté s příchutí kokosového mléka.</p>
+      <p>Kafe nikdy.</p>
       <a class="arrow__link link__left" href="/onas/"
         ><p>
           O nás<br />
