--- a/foto.html
+++ b/foto.html
@@ -7,46 +7,46 @@ title: Fotky
   <h3 class="foto__title">Fotogalerie</h3>
   <div class="kontejner">
     <a data-fslightbox href="/images/Octopus16.jpg"
-      ><img src="/images/Octopus16.jpg" alt="náušnice"
+      ><img src="/images/Octopus16.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus2.jpg"
-      ><img src="/images/Octopus2.jpg" alt="náušnice"
+      ><img src="/images/Octopus2.jpg" alt="Octopus Vocalis"
     /></a>
     <a class="foto4" data-fslightbox href="/images/Octopus4.jpg"
-      ><img src="/images/Octopus4.jpg" alt="náušnice"
+      ><img src="/images/Octopus4.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus15.jpg"
-      ><img src="/images/Octopus15.jpg" alt="náušnice"
+      ><img src="/images/Octopus15.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus6.jpg"
-      ><img src="/images/Octopus6.jpg" alt="náušnice"
+      ><img src="/images/Octopus6.jpg" alt="Octopus Vocalis"
     /></a>
-    <a data-fslightbox href="/images/Octopus12.jpg"
-      ><img src="/images/Octopus12.jpg" alt="náušnice"
+    <a data-fslightbox href="/images/Octopus18.jpg"
+      ><img src="/images/Octopus18.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus7.jpg"
-      ><img src="/images/Octopus7.jpg" alt="náušnice"
+      ><img src="/images/Octopus7.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus11.jpg"
-      ><img src="/images/Octopus11.jpg" alt="náušnice"
+      ><img src="/images/Octopus11.jpg" alt="Octopus Vocalis"
     /></a>
     <a class="foto8" data-fslightbox href="/images/Octopus8.jpg"
-      ><img src="/images/Octopus8.jpg" alt="náušnice"
+      ><img src="/images/Octopus8.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus9.jpg"
-      ><img src="/images/Octopus9.jpg" alt="náušnice"
+      ><img src="/images/Octopus9.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus10.jpg"
-      ><img src="/images/Octopus10.jpg" alt="náušnice"
+      ><img src="/images/Octopus10.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus14bw.jpg"
-      ><img src="/images/Octopus14bw.jpg" alt="náušnice"
+      ><img src="/images/Octopus14bw.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus13.jpg"
-      ><img src="/images/Octopus13.jpg" alt="náušnice"
+      ><img src="/images/Octopus13.jpg" alt="Octopus Vocalis"
     /></a>
     <a data-fslightbox href="/images/Octopus17.jpg"
-      ><img src="/images/Octopus17.jpg" alt="náušnice"
+      ><img src="/images/Octopus17.jpg" alt="Octopus Vocalis"
     /></a>
   </div>
 </div>
