--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ title: Octopus Vocalis | Vokální oktet
       <div class="program__box box__uvod">
         <h4>ZE ŠPANĚLSKA DO NOVÉHO SVĚTA</h4>
         <p>
-          <strong>Kdy a kde: </strong>6.11. 2022 19 hod., Hudební nešpory v
+          <strong>Kdy a kde: </strong>6.11. 2022, 19 hod., Hudební nešpory v
           Červeném kostele, Brno
         </p>
 
